--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="./js/pushandpop_controller.js"></script>
   <script type="text/javascript" src="./js/goto_controller.js"></script>
   <script type="text/javascript" src="./js/draganddrop_controller.js"></script>
+  <script type="text/javascript" src="./js/move_controller.js"></script>
 </head>
 <title> Split Window</title>
 <body>
@@ -23,6 +24,9 @@
         <div data-target="pushandpop.leftheaders" class="thumbnailsleft"> 
         </div>
         <div data-target="pushandpop.leftsection" class="ourleft">
+          <div class="buttons">
+            <button class="top" data-controller="move" data-action="click->move#toTop"><i class="fa fa-arrow-up"></i></button>
+          </div>
         </div>
 
       </center>
@@ -42,6 +46,10 @@
         <div data-target="pushandpop.rightheaders" class="thumbnailsright">
         </div>
         <div data-target="pushandpop.rightsection" class="ourright">
+          <div class="buttons">
+            <button class="top" data-controller="move" data-action="click->move#toTop"><i class="fa fa-arrow-up"></i></button>
+          </div>
+ 
         </div>
       </center>
     </div>
