Drag and drop thumbnails to anywhere

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="./js/goto_controller.js"></script>
   <script type="text/javascript" src="./js/draganddrop_controller.js"></script>
   <script type="text/javascript" src="./js/move_controller.js"></script>
+  <script type="text/javascript" src="./js/draganddropfrombothsides_controller.js"></script>
 </head>
 <title> Split Window</title>
 <body>
@@ -21,8 +22,10 @@
         </div>
 
         <center><h1>Left Section</h1>
-        <div data-target="pushandpop.leftheaders" class="thumbnailsleft"> 
-        </div>
+
+        <article data-target="pushandpop.leftheaders" class="thumbnailsleft"> 
+        </article>
+
         <div data-target="pushandpop.leftsection" class="ourleft">
         </div>
         <div class="buttons">
@@ -43,11 +46,10 @@
       <center><h1>Right Section</h1>
 
 
-        <div data-target="pushandpop.rightheaders" class="thumbnailsright">
-        </div>
-        <div data-target="pushandpop.rightsection" class="ourright">
+        <article data-target="pushandpop.rightheaders" class="thumbnailsright">
+        </article>
 
-         
+        <div data-target="pushandpop.rightsection" class="ourright">
         </div>
 
         <div class="buttons">
